--- a/app/about.html
+++ b/app/about.html
@@ -185,7 +185,8 @@
 								tin:</p>
 						</div>
 						<div class="box-title-img text-center">
-							<img src="images/about-title-img.png" alt="">
+							<img src="images/about-title-img.png" alt="" class="d-none d-md-block">
+							<img src="images/about-title-img-mb.png" alt="" class="d-block d-md-none">
 						</div>
 						<div class="box-img">
 							<img src="images/img-about3.png" alt="">
@@ -313,52 +314,50 @@
 		</div>
 		<section class="section-form">
 			<div class="container">
-				<div class="row box-contact">
-					<div class="col-md-6">
-						<div class="box-img">
-							<img src="images/bs4_1.png" alt="">
+				<div class="box-contact">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="box-img">
+								<img src="images/bs4_1.png" alt="">
+							</div>
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box-form-side">
-							<form action="" class="form">
-								<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
-								<div class="form-row">
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+						<div class="col-md-6">
+							<div class="box-form-side">
+								<form action="" class="form">
+									<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
+									<div class="form-row">
+										<div class="col-12">
+											<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+										</div>
+										<div class="col-12">
+											<input type="text" class="form-control" name="numberphone"
+												pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+										</div>
+										<div class="col-12 col-md-6">
+											<input type="date" class="form-control" name="date" placeholder="Ngày khám">
+										</div>
+										<div class="col-12 col-md-6">
+											<select name="datetime" class="form-control">
+												<option value="">Giờ khám</option>
+												<option value="8:00">8:00</option>
+												<option value="8:30">8:30</option>
+												<option value="9:00">9:00</option>
+											</select>
+										</div>
 									</div>
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="numberphone"
-											pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+									<button type="submit" class="btn btn-submit">Gửi thông tin</button>
+									<div class="form-cta">
+										<a href="#" class="form-cta-item">
+											<img src="images/telephone-call.svg" alt="">
+											Gọi Lâm tui
+										</a>
+										<a href="#" class="form-cta-item">
+											<img src="images/icon-zalo.svg" alt="">
+											Nhắn Zalo
+										</a>
 									</div>
-									<div class="col-md-12">
-										<textarea name="note" class="form-control"
-											placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
-									</div>
-									<div class="col-md-6">
-										<input type="date" class="form-control" name="date" placeholder="Ngày khám">
-									</div>
-									<div class="col-md-6">
-										<select name="datetime" class="form-control">
-											<option value="">Giờ khám</option>
-											<option value="8:00">8:00</option>
-											<option value="8:30">8:30</option>
-											<option value="9:00">9:00</option>
-										</select>
-									</div>
-								</div>
-								<button type="submit" class="btn btn-submit">Gửi thông tin</button>
-								<div class="form-cta">
-									<a href="#" class="form-cta-item">
-										<img src="images/telephone-call.svg" alt="">
-										Gọi Lâm tui
-									</a>
-									<a href="#" class="form-cta-item">
-										<img src="images/icon-zalo.svg" alt="">
-										Nhắn Zalo
-									</a>
-								</div>
-							</form>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
