--- a/app/contact.html
+++ b/app/contact.html
@@ -129,47 +129,50 @@
 					<a href="" class="contact-link-btn"><img src="images/telephone-call_1.png" alt="">Gọi trực tiếp</a>
 					<a href="" class="contact-link-btn"><img src="images/icon_zalo2.png" alt="">Nhắn Zalo</a>
 				</div>
-				<div class="row box-contact">
-					<div class="col-md-6">
-						<div class="box-img">
-							<img src="images/bs4_1.png" alt="">
+				<div class="box-contact">
+					<div class="row ">
+						<div class="col-md-6">
+							<div class="box-img">
+								<img src="images/bs4_1.png" alt="" class="d-none d-md-block">
+								<img src="images/bs4 1.png" alt="" class="d-block d-md-none">
+							</div>
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box-form-side">
-							<form action="" class="form">
-								<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
-								<div class="form-row">
-									<div class="col-md-12">
-										<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+						<div class="col-md-6">
+							<div class="box-form-side">
+								<form action="" class="form">
+									<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
+									<div class="form-row">
+										<div class="col-md-12">
+											<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+										</div>
+										<div class="col-6">
+											<input type="text" class="form-control" name="numberphone"
+												pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+										</div>
+										<div class="col-6">
+											<input type="text" class="form-control" name="age"
+												 placeholder="Tuổi">
+										</div>
+										<div class="col-md-12">
+											<textarea name="note" class="form-control"
+												placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
+										</div>
+										<div class="col-6">
+											<input type="date" class="form-control" name="date" placeholder="Ngày khám">
+										</div>
+										<div class="col-6">
+											<select name="datetime" class="form-control">
+												<option value="">Giờ khám</option>
+												<option value="8:00">8:00</option>
+												<option value="8:30">8:30</option>
+												<option value="9:00">9:00</option>
+											</select>
+										</div>
 									</div>
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="numberphone"
-											pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
-									</div>
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="age"
-											 placeholder="Tuổi">
-									</div>
-									<div class="col-md-12">
-										<textarea name="note" class="form-control"
-											placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
-									</div>
-									<div class="col-md-6">
-										<input type="date" class="form-control" name="date" placeholder="Ngày khám">
-									</div>
-									<div class="col-md-6">
-										<select name="datetime" class="form-control">
-											<option value="">Giờ khám</option>
-											<option value="8:00">8:00</option>
-											<option value="8:30">8:30</option>
-											<option value="9:00">9:00</option>
-										</select>
-									</div>
-								</div>
-								<button type="submit" class="btn btn-submit">Gửi thông tin</button>
-								<p class="form-note">* Thông tin của bà con được bảo mật tuyệt đối. Tui chỉ dùng để tư vấn, không chia sẻ cho ai hết nghen</p>
-							</form>
+									<button type="submit" class="btn btn-submit">Gửi thông tin</button>
+									<p class="form-note">* Thông tin của bà con được bảo mật tuyệt đối. Tui chỉ dùng để tư vấn, không chia sẻ cho ai hết nghen</p>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
