--- a/app/faq.html
+++ b/app/faq.html
@@ -155,21 +155,21 @@
 							<div class="box-file">
 								<p class="box-file-title">Hình ảnh đính kèm để tui chẩn bệnh (nếu có)</p>
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-md-4 item-file">
 										<div class="box-file-item">
 											<p class="box-file-title">Tình trạng của Lưỡi, Sắc mặt, Vùng da</p>
 											<label for="file_tinhtrang">Chọn tệp</label>
 											<input type="file" name="file_tinhtrang" id="file_tinhtrang" hidden>
 										</div>
 									</div>
-									<div class="col-md-4">
+									<div class="col-md-4 item-file">
 										<div class="box-file-item">
 											<p class="box-file-title">Đơn thuốc Bà con đã và đang sử dụng</p>
 											<label for="file_donthuoc">Chọn tệp</label>
 											<input type="file" name="file_donthuoc" id="file_donthuoc" hidden>
 										</div>
 									</div>
-									<div class="col-md-4">
+									<div class="col-md-4 item-file">
 										<div class="box-file-item">
 											<p class="box-file-title">Kết quả chụp chiếu, Bệnh án</p>
 											<label for="file_ketqua">Chọn tệp</label>
