--- a/app/service.html
+++ b/app/service.html
@@ -132,7 +132,8 @@
 					<img src="images/banner-service.jpg" alt="">
 				</div>
 				<div class="box-img-bottom">
-					<img src="images/img-title-service.png" alt="">
+					<img src="images/img-title-service.png" alt="" class="d-none d-md-block">
+					<img src="images/img-title-service-mb.png" alt="" class="d-block d-md-none">
 				</div>
 			</div>
 		</div>
@@ -199,7 +200,8 @@
 			<div class="container">
 				<h2 class="section-title text-center">Bắt mạch - Bốc thuốc - Trị bệnh từ gốc</h2>
 				<div class="box-img">
-					<img src="images/progress-img.png" alt="">
+					<img src="images/progress-img.png" alt="" class="d-none d-md-block">
+					<img src="images/progress-img-title.png" alt="" class="d-block d-md-none">
 				</div>
 				<div class="row list-process">
 					<div class="col-md-3 item">
@@ -300,37 +302,39 @@
 		</section>
 		<section class="section-form">
 			<div class="container">
-				<div class="row box-contact">
-					<div class="col-md-6">
-						<div class="box-img">
-							<img src="images/bs4_1.png" alt="">
+				<div class="box-contact">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="box-img">
+								<img src="images/bs4_1.png" alt="">
+							</div>
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box-form-side">
-							<form action="" class="form">
-								<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
-								<div class="form-row">
-									<div class="col-md-12">
-										<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+						<div class="col-md-6">
+							<div class="box-form-side">
+								<form action="" class="form">
+									<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
+									<div class="form-row">
+										<div class="col-md-12">
+											<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+										</div>
+										<div class="col-md-12">
+											<input type="text" class="form-control" name="numberphone"
+												pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+										</div>
 									</div>
-									<div class="col-md-12">
-										<input type="text" class="form-control" name="numberphone"
-											pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+									<button type="submit" class="btn btn-submit">Gửi thông tin</button>
+									<div class="form-cta">
+										<a href="#" class="form-cta-item">
+											<img src="images/telephone-call.svg" alt="">
+											Gọi Lâm tui
+										</a>
+										<a href="#" class="form-cta-item">
+											<img src="images/icon-zalo.svg" alt="">
+											Nhắn Zalo
+										</a>
 									</div>
-								</div>
-								<button type="submit" class="btn btn-submit">Gửi thông tin</button>
-								<div class="form-cta">
-									<a href="#" class="form-cta-item">
-										<img src="images/telephone-call.svg" alt="">
-										Gọi Lâm tui
-									</a>
-									<a href="#" class="form-cta-item">
-										<img src="images/icon-zalo.svg" alt="">
-										Nhắn Zalo
-									</a>
-								</div>
-							</form>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
