--- a/app/tell_stories.html
+++ b/app/tell_stories.html
@@ -195,48 +195,50 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="row box-contact">
-					<div class="col-md-6">
-						<div class="box-img">
-							<img src="images/bs4_1.png" alt="">
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box-form-side">
-							<form action="" class="form">
-								<p class="form-title">Thấy giống mình?<br>
-									Đặt lịch để tui coi mạch <br>
-									trị đúng chỗ đau</p>
-								<div class="form-row">
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
-									</div>
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="numberphone"
-											pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
-									</div>
-									<div class="col-md-12">
-										<textarea name="note" class="form-control"
-											placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
-									</div>
+				<div class="section-form">
+					<div class="box-contact">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="box-img">
+									<img src="images/bs4_1.png" alt="">
 								</div>
-								<button type="submit" class="btn btn-submit">Gửi thông tin</button>
-								<div class="form-cta">
-									<a href="#" class="form-cta-item">
-										<img src="images/telephone-call.svg" alt="">
-										Gọi Lâm tui
-									</a>
-									<a href="#" class="form-cta-item">
-										<img src="images/icon-zalo.svg" alt="">
-										Nhắn Zalo
-									</a>
+							</div>
+							<div class="col-md-6">
+								<div class="box-form-side">
+									<form action="" class="form">
+										<p class="form-title">Thấy giống mình?<br>
+											Đặt lịch để tui coi mạch <br>
+											trị đúng chỗ đau</p>
+										<div class="form-row">
+											<div class="col-md-6">
+												<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+											</div>
+											<div class="col-md-6">
+												<input type="text" class="form-control" name="numberphone"
+													pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+											</div>
+											<div class="col-md-12">
+												<textarea name="note" class="form-control"
+													placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
+											</div>
+										</div>
+										<button type="submit" class="btn btn-submit">Gửi thông tin</button>
+										<div class="form-cta">
+											<a href="#" class="form-cta-item">
+												<img src="images/telephone-call.svg" alt="">
+												Gọi Lâm tui
+											</a>
+											<a href="#" class="form-cta-item">
+												<img src="images/icon-zalo.svg" alt="">
+												Nhắn Zalo
+											</a>
+										</div>
+									</form>
 								</div>
-							</form>
+							</div>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</main>
