--- a/app/treatment2.html
+++ b/app/treatment2.html
@@ -145,12 +145,12 @@
 		<section class="section-reasoning">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 order-2 order-md-1">
 						<div class="box-img-reasoning">
 							<img src="images/biasach1.png" alt="">
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 order-1 order-md-2">
 						<div class="box-content-reasoning">
 							<h2 class="section-title ">Cơ sở lý luận</h2>
 							<p>Làm nghề y, Lâm tui không trị mò, không làm đại. Mỗi lần bấm huyệt, day bóp là phải coi
@@ -375,7 +375,7 @@
 			<div class="container">
 				<h2 class="section-title text-center">Quy trình trị liệu cá nhân hóa</h2>
 				<div class="row list-procedure">
-					<div class="col-md-3">
+					<div class="col-md-3 item">
 						<div class="inner">
 							<div class="inner-number">
 								01
@@ -387,7 +387,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 item">
 						<div class="inner">
 							<div class="inner-number">
 								02
@@ -399,7 +399,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 item">
 						<div class="inner">
 							<div class="inner-number">
 								03
@@ -411,7 +411,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 item">
 						<div class="inner">
 							<div class="inner-number">
 								04
@@ -491,41 +491,43 @@
 		</section>
 		<section class="section-form">
 			<div class="container">
-				<div class="row box-contact">
-					<div class="col-md-6">
-						<div class="box-img">
-							<img src="images/bs4_1.png" alt="">
+				<div class="box-contact">
+					<div class="row ">
+						<div class="col-md-6">
+							<div class="box-img">
+								<img src="images/bs4_1.png" alt="">
+							</div>
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box-form-side">
-							<form action="" class="form">
-								<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
-								<div class="form-row">
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+						<div class="col-md-6">
+							<div class="box-form-side">
+								<form action="" class="form">
+									<p class="form-title">Hẹn lịch khám với Lâm tui tại đây nghen!</p>
+									<div class="form-row">
+										<div class="col-md-6">
+											<input type="text" class="form-control" name="fullname" placeholder="Họ tên">
+										</div>
+										<div class="col-md-6">
+											<input type="text" class="form-control" name="numberphone"
+												pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+										</div>
+										<div class="col-md-12">
+											<textarea name="note" class="form-control"
+												placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
+										</div>
 									</div>
-									<div class="col-md-6">
-										<input type="text" class="form-control" name="numberphone"
-											pattern="(\+84|0){1}(9|8|7|5|3){1}[0-9]{8}" placeholder="Số điện thoại">
+									<button type="submit" class="btn btn-submit">Gửi thông tin</button>
+									<div class="form-cta">
+										<a href="#" class="form-cta-item">
+											<img src="images/telephone-call.svg" alt="">
+											Gọi Lâm tui
+										</a>
+										<a href="#" class="form-cta-item">
+											<img src="images/icon-zalo.svg" alt="">
+											Nhắn Zalo
+										</a>
 									</div>
-									<div class="col-md-12">
-										<textarea name="note" class="form-control"
-											placeholder="Triệu chứng bạn gặp phải" rows="4"></textarea>
-									</div>
-								</div>
-								<button type="submit" class="btn btn-submit">Gửi thông tin</button>
-								<div class="form-cta">
-									<a href="#" class="form-cta-item">
-										<img src="images/telephone-call.svg" alt="">
-										Gọi Lâm tui
-									</a>
-									<a href="#" class="form-cta-item">
-										<img src="images/icon-zalo.svg" alt="">
-										Nhắn Zalo
-									</a>
-								</div>
-							</form>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
